@@ -1,3 +1,7 @@
+2007-04-07 Paul Jakma <paul.jakma@sun.com>
+
+	* prefix.h: Add define to match IPv4 Link-Local addresses
+
 2007-03-20 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
 
 	* log.c: (mes_lookup) Make the function more robust: check for
